# tinyrenderer

./: CMakeLists.txt
include/: color.h  geometry.h  render.h
src/: main.cpp  render.cpp
